--- a/src/Tests/Microsoft.NET.TestFramework/SetupTestRoot.targets
+++ b/src/Tests/Microsoft.NET.TestFramework/SetupTestRoot.targets
@@ -2,6 +2,7 @@
 <Project>
 
   <ItemGroup>
+    <Foo Include="Bar" />
     <_CopyDirectoryBuildTestDependenciesInput Include="$(MSBuildThisFileDirectory)..\Common\Empty.props" />
     <_CopyDirectoryBuildTestDependenciesInput Include="$(MSBuildThisFileDirectory)..\Common\Empty.targets" />
   </ItemGroup>
@@ -13,7 +14,7 @@
 
   <!-- Since TestFramework is multi-targeted, only copy these files for one of the inner builds -->
   <Target Name="_CopyDirectoryBuildTestDependencies" AfterTargets="Build" Inputs="@(_CopyDirectoryBuildTestDependenciesInput)" Outputs="@(_CopyDirectoryBuildTestDependenciesOutput)"
-          Condition="'($TargetFramework)' == '$(SdkTargetFramework)'">
+          Condition="'$(TargetFramework)' == '$(SdkTargetFramework)'">
     <Copy SourceFiles="@(_CopyDirectoryBuildTestDependenciesInput)" DestinationFiles="@(_CopyDirectoryBuildTestDependenciesOutput)" />
   </Target>
   
@@ -21,7 +22,7 @@
           AfterTargets="Build"
           Inputs="$(RepoRoot)NuGet.config"
           Outputs="$(ArtifactsTmpDir)NuGet.config"
-          Condition="'($TargetFramework)' == '$(SdkTargetFramework)'"
+          Condition="'$(TargetFramework)' == '$(SdkTargetFramework)'"
           >
     <Copy SourceFiles="$(RepoRoot)NuGet.config" DestinationFiles="$(ArtifactsTmpDir)NuGet.config" />
   </Target>
