Add a restore source to the local packages folder where the project tools are created.

--- a/src/Assets/TestProjects/AppWithToolDependency/AppWithToolDependency.csproj
+++ b/src/Assets/TestProjects/AppWithToolDependency/AppWithToolDependency.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <OutputType>Exe</OutputType>
     <RestoreAdditionalProjectSources Condition="'$(TEST_PACKAGES)' != ''">$(RestoreAdditionalProjectSources);$(TEST_PACKAGES)</RestoreAdditionalProjectSources>
+    <RestoreAdditionalProjectSources>$(RestoreAdditionalProjectSources);$(RepoRoot)/artifacts/tmp/$(Configuration)/test/packages</RestoreAdditionalProjectSources>
   </PropertyGroup>
 
   <ItemGroup>
