Upload all of bin
Looks like I can't filter by glob in artifact upload so do all of bin.

--- a/.vsts-dotnet.yml
+++ b/.vsts-dotnet.yml
@@ -150,7 +150,7 @@ stages:
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Artifact: symbols'
       inputs:
-        PathtoPublish: 'artifacts\bin\**\*.pdb'
+        PathtoPublish: 'artifacts\bin'
         ArtifactName: symbols
       condition: succeededOrFailed()
 
