Turn off source link for dotnet-portable, that is a test project in the repo.

--- a/src/Assets/TestPackages/dotnet-portable/dotnet-portable.csproj
+++ b/src/Assets/TestPackages/dotnet-portable/dotnet-portable.csproj
@@ -6,6 +6,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <OutputType>Exe</OutputType>
     <IsPackable>true</IsPackable>
+
+    <EnableSourceControlManagerQueries>false</EnableSourceControlManagerQueries>
+    <EnableSourceLink>false</EnableSourceLink>
+    <DeterministicSourcePaths>false</DeterministicSourcePaths>
   </PropertyGroup>
 
 </Project>
