Fix casing of references to projects in the Cli folder.

--- a/src/Tests/ArgumentForwarding.Tests/ArgumentForwarding.Tests.csproj
+++ b/src/Tests/ArgumentForwarding.Tests/ArgumentForwarding.Tests.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\cli\dotnet\dotnet.csproj" />
+    <ProjectReference Include="..\..\Cli\dotnet\dotnet.csproj" />
     <ProjectReference Include="..\Microsoft.NET.TestFramework\Microsoft.NET.TestFramework.csproj" />
   </ItemGroup>
 
