--- a/src/Tests/Microsoft.DotNet.Tools.Tests.Utilities.Tests/Microsoft.DotNet.Tools.Tests.Utilities.Tests.csproj
+++ b/src/Tests/Microsoft.DotNet.Tools.Tests.Utilities.Tests/Microsoft.DotNet.Tools.Tests.Utilities.Tests.csproj
@@ -5,7 +5,7 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\cli\Microsoft.DotNet.Cli.Utils\Microsoft.DotNet.Cli.Utils.csproj" />
+    <ProjectReference Include="..\..\Cli\Microsoft.DotNet.Cli.Utils\Microsoft.DotNet.Cli.Utils.csproj" />
     <ProjectReference Include="..\Microsoft.NET.TestFramework\Microsoft.NET.TestFramework.csproj" />
   </ItemGroup>
 </Project>
