--- a/src/Tasks/Microsoft.Managed.After.targets
+++ b/src/Tasks/Microsoft.Managed.After.targets
@@ -1,21 +1,19 @@
 ﻿<!--
 ***********************************************************************************************
-This file is deprecated and left here for back compat reasons. It is replaced by Microsoft.Managed.<Before|After>.targets
+WARNING:  DO NOT MODIFY this file unless you are knowledgeable about MSBuild and have
+          created a backup copy.  Incorrect changes to this file will make it
+          impossible to load or build your projects from the command-line or the IDE.
+
+This file defines common build logic for all managed languaged: C#, VisualBasic, F#
+It is imported after the common targets have been imported.
 
 Copyright (C) Microsoft Corporation. All rights reserved.
 ***********************************************************************************************
 -->
 
 <Project>
-   <!--
-        We are doing a cross-targeting build if there is a non-empty list of target frameworks specified
-        and there is no current target framework being built individually. In that case, a multitargeting
-        project file like Microsoft.<language>.CrossTargeting.targets gets imported.
-   -->
-   <PropertyGroup Condition="'$(TargetFrameworks)' != '' and '$(TargetFramework)' == ''">
-      <IsCrossTargetingBuild>true</IsCrossTargetingBuild>
-   </PropertyGroup>
 
+   <!-- Define crosstargeting for static graph, so it can identify inner and outer build graph nodes -->
    <PropertyGroup>
       <InnerBuildProperty>TargetFramework</InnerBuildProperty>
       <InnerBuildPropertyValues>TargetFrameworks</InnerBuildPropertyValues>
@@ -77,6 +75,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
 
       <ProjectReferenceTargets Include="Publish" Targets="$(ProjectReferenceTargetsForPublish)" Condition=" '$(ProjectReferenceTargetsForPublish)' != '' " />
       <ProjectReferenceTargets Include="GetCopyToPublishDirectoryItems" Targets="$(ProjectReferenceTargetsForGetCopyToPublishDirectoryItems)" Condition=" '$(ProjectReferenceTargetsForGetCopyToPublishDirectoryItems)' != '' " />
+
   </ItemGroup>
 
 </Project>
