--- a/src/Package/MSBuild.Engine.Corext/MsBuild.Engine.Corext.nuspec
+++ b/src/Package/MSBuild.Engine.Corext/MsBuild.Engine.Corext.nuspec
@@ -45,6 +45,8 @@
     <file src="$X86BinPath$/Microsoft.Build.CommonTypes.xsd" target="v15.0/bin/MSBuild" />
     <file src="$X86BinPath$/MSBuild.rsp" target="v15.0/bin" />
     <file src="$X86BinPath$/Microsoft.Managed.targets" target="v15.0/bin" />
+    <file src="$X86BinPath$/Microsoft.Managed.Before.targets" target="v15.0/bin" />
+    <file src="$X86BinPath$/Microsoft.Managed.After.targets" target="v15.0/bin" />
     <file src="$X86BinPath$/Microsoft.CSharp.targets" target="v15.0/bin" />
     <file src="$X86BinPath$/Microsoft.VisualBasic.targets" target="v15.0/bin" />
     <file src="$X86BinPath$/Microsoft.Common.CrossTargeting.targets" target="v15.0/bin" />
@@ -97,6 +99,8 @@
     <file src="$X86BinPath$/Microsoft.Build.CommonTypes.xsd" target="v15.0/bin/amd64/MSBuild" />
     <file src="$X86BinPath$/MSBuild.rsp" target="v15.0/bin/amd64" />
     <file src="$X86BinPath$/Microsoft.Managed.targets" target="v15.0/bin/amd64" />
+    <file src="$X86BinPath$/Microsoft.Managed.Before.targets" target="v15.0/bin/amd64" />
+    <file src="$X86BinPath$/Microsoft.Managed.After.targets" target="v15.0/bin/amd64" />
     <file src="$X86BinPath$/Microsoft.CSharp.targets" target="v15.0/bin/amd64" />
     <file src="$X86BinPath$/Microsoft.VisualBasic.targets" target="v15.0/bin/amd64" />
     <file src="$X86BinPath$/Microsoft.Common.CrossTargeting.targets" target="v15.0/bin/amd64" />
