Adding fix and test coverage for runtimeconfig.json updates not being reflected on partial builds

--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Sdk.targets
@@ -265,7 +265,7 @@ Copyright (c) .NET Foundation. All rights reserved.
           DependsOnTargets="_GenerateRuntimeConfigurationFilesInputCache"
           BeforeTargets="CopyFilesToOutputDirectory"
           Condition=" '$(GenerateRuntimeConfigurationFiles)' == 'true'"
-          Inputs="@(GenerateRuntimeConfigurationFilesInputs)"
+          Inputs="@(GenerateRuntimeConfigurationFilesInputs);$(MSBuildAllProjects)"
           Outputs="$(ProjectRuntimeConfigFilePath);$(ProjectRuntimeConfigDevFilePath)">
 
     <PropertyGroup>
