--- a/src/Layout/redist/targets/OverlaySdkOnLKG.targets
+++ b/src/Layout/redist/targets/OverlaySdkOnLKG.targets
@@ -36,6 +36,6 @@
     <!-- Run "dotnet new" (which will just display usage and available templates) in order to print first time
          use message so that it doesn't interfere with tests which check the output of commands. -->
     <Exec Command="$(RedistLayoutPath)dotnet new"
-          EnvironmentVariables="DOTNET_CLI_HOME=$(ArtifactsTmpDir).dotnet" />
+          EnvironmentVariables="DOTNET_CLI_HOME=$(ArtifactsTmpDir)" />
   </Target>
 </Project>
