Updating PublishItemsOutputGroup to handle single file publish scenario
Updating comment

Updating PublishItemsOutputGroupTests to be Windows only, will follow up on why they fail sometimes in Linux

Only adding WindowsOnly to new test, not existing ones

Adding diagnostic logging to test to help diagnose linux failure

Adding additional logging to test

Additional logging changes to help diagnose linux failure

Removing temporary additional logging from test

--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Publish.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Publish.targets
@@ -864,6 +864,11 @@ Copyright (c) .NET Foundation. All rights reserved.
                       Condition="'%(_ResolvedFileToPublishAlways.ExcludeFromSingleFile)' != 'true'"/>
     </ItemGroup>
 
+    <PropertyGroup>
+      <PublishedSingleFileName>$(AssemblyName)$(_NativeExecutableExtension)</PublishedSingleFileName>
+      <PublishedSingleFilePath>$(PublishDir)$(PublishedSingleFileName)</PublishedSingleFilePath>
+    </PropertyGroup>
+
   </Target>
 
   <UsingTask TaskName="GenerateBundle" AssemblyFile="$(MicrosoftNETBuildTasksAssembly)" />
@@ -871,14 +876,14 @@ Copyright (c) .NET Foundation. All rights reserved.
           Condition="'$(PublishSingleFile)' == 'true'"
           DependsOnTargets="_ComputeFilesToBundle" 
           Inputs="@(_FilesToBundle)"
-          Outputs="$(PublishDir)$(AssemblyName)$(_NativeExecutableExtension)">
+          Outputs="$(PublishedSingleFilePath)">
 
     <GenerateBundle FilesToBundle="@(_FilesToBundle)"
-                    AppHostName="$(AssemblyName)$(_NativeExecutableExtension)"
+                    AppHostName="$(PublishedSingleFileName)"
                     IncludeSymbols="$(IncludeSymbolsInSingleFile)"
                     OutputDir="$(PublishDir)"
                     ShowDiagnosticOutput="false"/>
-    
+
   </Target>
 
   <!--
@@ -977,6 +982,26 @@ Copyright (c) .NET Foundation. All rights reserved.
 
   <!--
     ============================================================
+                                        ComputeFilesCopiedToPublishDir
+
+    Gathers all the files that were copied to the publish directory.
+    ============================================================
+    -->
+  <Target Name="ComputeFilesCopiedToPublishDir"
+          DependsOnTargets="_CopyResolvedFilesToPublishPreserveNewest;
+                            _CopyResolvedFilesToPublishAlways;
+                            BundlePublishDirectory">
+
+    <ItemGroup>
+      <FilesCopiedToPublishDir Include="@(_ResolvedUnbundledFileToPublishPreserveNewest)"/>
+      <FilesCopiedToPublishDir Include="@(_ResolvedUnbundledFileToPublishAlways)"/>
+      <FilesCopiedToPublishDir Include="$(PublishedSingleFilePath)" RelativePath="$(PublishedSingleFileName)" IsKeyOutput="true" Condition="'$(PublishSingleFile)' == 'true'"/>
+    </ItemGroup>
+
+  </Target>
+
+  <!--
+    ============================================================
                                             PublishItemsOutputGroup
 
     Emit an output group containing all files that get published.  This will be consumed by VS installer projects.
@@ -987,17 +1012,18 @@ Copyright (c) .NET Foundation. All rights reserved.
       $(PublishItemsOutputGroupDependsOn);
       ResolveReferences;
       ComputeFilesToPublish;
+      ComputeFilesCopiedToPublishDir;
     </PublishItemsOutputGroupDependsOn>
   </PropertyGroup>
 
   <Target Name="PublishItemsOutputGroup" DependsOnTargets="$(PublishItemsOutputGroupDependsOn)" Returns="@(PublishItemsOutputGroupOutputs)">
     <ItemGroup>
-      <PublishItemsOutputGroupOutputs Condition="'$(GenerateDependencyFile)' == 'true' and '$(_UseBuildDependencyFile)' != 'true'"
+      <PublishItemsOutputGroupOutputs Condition="'$(GenerateDependencyFile)' == 'true' and '$(_UseBuildDependencyFile)' != 'true' and '$(PublishSingleFile)' != 'true'"
                                       Include="$(PublishDepsFilePath)"
                                       TargetPath="$(ProjectDepsFileName)" />
-      <PublishItemsOutputGroupOutputs Include="@(ResolvedFileToPublish->'%(FullPath)')"
-                                      TargetPath="%(ResolvedFileToPublish.RelativePath)"
-                                      IsKeyOutput="%(ResolvedFileToPublish.IsKeyOutput)"
+      <PublishItemsOutputGroupOutputs Include="@(FilesCopiedToPublishDir->'%(FullPath)')"
+                                      TargetPath="%(FilesCopiedToPublishDir.RelativePath)"
+                                      IsKeyOutput="%(FilesCopiedToPublishDir.IsKeyOutput)"
                                       OutputGroup="PublishItemsOutputGroup" />
     </ItemGroup>
   </Target>
