Disable some projects from running tests as tools

--- a/src/Tests/ArgumentForwarding.Tests/ArgumentForwarding.Tests.csproj
+++ b/src/Tests/ArgumentForwarding.Tests/ArgumentForwarding.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>$(ToolsetTargetFramework)</TargetFramework>
     <OutputType>Exe</OutputType>
+    <CanRunTestAsTool>false</CanRunTestAsTool>
   </PropertyGroup>
 
   <ItemGroup>
