--- a/src/Tests/EndToEnd.Tests/EndToEnd.Tests.csproj
+++ b/src/Tests/EndToEnd.Tests/EndToEnd.Tests.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>$(ToolsetTargetFramework)</TargetFramework>
     <OutputType>Exe</OutputType>
+    <CanRunTestAsTool>false</CanRunTestAsTool>
   </PropertyGroup>
 
   <ItemGroup>
