Use net481 registry key, falling back to net48 if unavailable

--- a/src/Tasks/Microsoft.NET.props
+++ b/src/Tasks/Microsoft.NET.props
@@ -22,6 +22,8 @@ Copyright (C) Microsoft Corporation. All rights reserved.
     ============================================================
   -->
   <PropertyGroup>
+    <!-- Attempt to use net4.8.1 if possible, falling back to the last available version. -->
+    <TargetFrameworkSDKToolsDirectory Condition=" '$(TargetFrameworkSDKToolsDirectory)' == '' ">$(SDK481ToolsPath)</TargetFrameworkSDKToolsDirectory>
     <TargetFrameworkSDKToolsDirectory Condition=" '$(TargetFrameworkSDKToolsDirectory)' == '' ">$(SDK40ToolsPath)</TargetFrameworkSDKToolsDirectory>
   </PropertyGroup>
 
