--- a/src/Assets/TestProjects/TestAppWithSlnUsingPublishReleaseConflictingValues/App/App.csproj
+++ b/src/Assets/TestProjects/TestAppWithSlnUsingPublishReleaseConflictingValues/App/App.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>$(CurrentTargetFramework)</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <PublishRelease>false</PublishRelease>
     <PackRelease>true</PackRelease>
   </PropertyGroup>
