--- a/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Publish.targets
+++ b/src/Tasks/Microsoft.NET.Build.Tasks/targets/Microsoft.NET.Publish.targets
@@ -118,8 +118,8 @@ Copyright (c) .NET Foundation. All rights reserved.
 
     <!-- Projects in a solution cannot have conflicting configurations. This checks if PublishRelease conflicted at runtime to avoid extra project evaluations. -->
     <NETSdkError  Condition="'$(_SolutionLevelPublishRelease)' != '' and '$(_SolutionLevelPublishRelease)' != '$(PublishRelease)'"
-                  ResourceName="SolutionExecutableConfigurationMismatchError"
-                  FormatArguments="PublishRelease;Full"/>
+                  ResourceName="SolutionProjectConfigurationsConflict"
+                  FormatArguments="PublishRelease;$(ProjectName)"/>
 
     <PropertyGroup>
       <!-- Ensure any PublishDir has a trailing slash, so it can be concatenated -->
