--- a/src/StringTools/StringTools.csproj
+++ b/src/StringTools/StringTools.csproj
@@ -19,7 +19,7 @@
     <!-- Don't publish the reference assembly if the build output isn't included. -->
     <TargetsForTfmSpecificBuildOutput Condition="'$(IncludeBuildOutput)' == 'false'" />
     <!-- NU5128: Add lib or ref assemblies for the net35 target framework. -->
-    <NoWarn>$(NoWarn),NU5128</NoWarn>
+    <NoWarn>$(NoWarn);NU5128</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
