--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         run: .\build.cmd -test
+      - name: connect with upterm
+        if: always()
+        uses: lhotari/action-upterm@v1
 
   build:
     if: github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
@@ -43,8 +46,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         run: ./build.sh --test
-
-  upterm:
-    steps:
       - name: connect with upterm
+        if: always()
         uses: lhotari/action-upterm@v1
