extract common logging functionality into ApiSymbolExtensions (#29379)
This change refactors APICompat and GenAPI to use a common set of logging abstractions. These include `ILog`, `ISuppressableLog`, `MSBuildLog`, `ConsoleLog`, `SuppressableConsoleLog`, `SuppressableMSBuildLog`, and `SuppressableTestLog`.

```
ILog
├─ConsoleLog────────────┬─SuppressableConsoleLog
├─ISuppressableLog──────┤
│ └─SuppressableTestLog │
└─MSBuildLog────────────┴─SuppressableMSBuildLog
```

Because we don't want the console logger to depend on `Microsoft.Build.*` packages, we exclude files that depend on it from `ApiSymbolExtensions`'s build. The depending packages (in this case `GenAPI.Task` and `ApiCompat.Task`) are required to include those files explicitly.

--- a/src/Microsoft.DotNet.ApiSymbolExtensions/Microsoft.DotNet.ApiSymbolExtensions.csproj
+++ b/src/Microsoft.DotNet.ApiSymbolExtensions/Microsoft.DotNet.ApiSymbolExtensions.csproj
@@ -11,6 +11,11 @@
     <_MicrosoftCodeAnalysisVersion Condition="'$(DotNetBuildFromSource)' == 'true'">$(MicrosoftCodeAnalysisPackageVersion)</_MicrosoftCodeAnalysisVersion>
   </PropertyGroup>
 
+  <!-- Exclude files that depend on Microsoft.Build.Framework and Microsoft.Build.Utilities.Core. These will be included by users of this package. -->
+  <PropertyGroup>
+    <DefaultItemExcludes>$(DefaultItemExcludes);Logging\MSBuildLog.cs</DefaultItemExcludes>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="$(_MicrosoftCodeAnalysisVersion)" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="$(_MicrosoftCodeAnalysisVersion)" />
