Public api analyzer change (#8116)
Fixes-ish #7903

Context
Our previous analyzer is not helpful due to #7903. This switches to using a more modern api analyzer.

Notes
The note that inspired this suggested including a version as well, but the documentation I found didn't mention a version.

--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -3,6 +3,7 @@
 <Project>
   <PropertyGroup>
     <VersionPrefix>17.5.0</VersionPrefix>
+    <PackageValidationBaselineVersion>17.4.0</PackageValidationBaselineVersion>
     <AssemblyVersion>15.1.0.0</AssemblyVersion>
     <PreReleaseVersionLabel>preview</PreReleaseVersionLabel>
     <DotNetUseShippingVersions>true</DotNetUseShippingVersions>
